Create the main structure of the navbar

--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <!DOCTYPE html>
 <!-- Root element of an html page -->
 <html>
-    <!-- contains meta information about the HTML page -->
-    <head>
-        <title>
-            PMT
-        </title>
-    </head>
-    <!-- The container for all the visible contents -->
-    <body>
-        
-    </body>
+  <!-- contains meta information about the HTML page -->
+  <head>
+    <title>PMT</title>
+    <link rel="stylesheet" href="./assits/styles/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <!-- The container for all the visible contents -->
+  <body>
+    <header>
+      <!-- Logo page -->
+      <img src="./assits/images/pmt.jpg" alt="Logo" class="logoPage" />
+      <ul class="menuItems">
+        <li class="navItem">Home</li>
+        <li class="navItem">About</li>
+        <li class="navItem">Contact Us</li>
+      </ul>
+    </header>
+  </body>
 </html>
